[package]
name = "progress-rs"
version = "0.1.1"
authors = ["Norbert Melzer <timmelzer@gmail.com>"]

description = "Display a progressbar on the terminal"
repository = "https://github.com/NobbZ/progress-rs.git"

license = "MIT"
license-file = "LICENSE"

[lib]
name = "progress"

[dependencies]

[dev-dependencies]
quickcheck = "0.2"
quickcheck_macros = "0.2"
