[package]
name = "progress-rs"
version = "0.3.1"
authors = ["Norbert Melzer <timmelzer@gmail.com>"]

description = "Display a progressbar on the terminal"
repository = "https://github.com/NobbZ/progress-rs.git"

license = "MIT"

[lib]
name = "progress"

[dependencies]
terminal_size = "0.1"

[dev-dependencies]
